# tm1637

./: Cargo.toml  DEMO.md  LICENSE-APACHE  LICENSE-MIT  README.md  cspell.json
.github/workflows/: build-and-test.yml.yml  spellcheck.yaml  tests.yml
examples/esp32/: Cargo.toml
examples/esp32/4-digits/: Cargo.toml  build.rs
examples/esp32/6-digits/: Cargo.toml
examples/esp32/6-digits/.cargo/: config.toml
examples/esp32/async/: Cargo.toml  diagram.json
examples/esp32/async - new/: Cargo.toml
examples/esp32/async/.cargo/: config.toml
examples/esp32/async/src/: main.rs
examples/esp32/blocking/: Cargo.toml  wokwi.toml
examples/esp32/blocking/src/: main.rs
examples/esp32/src/: main.rs
examples/linux-ftdi/: Cargo.toml
examples/linux-ftdi/.devcontainer/: devcontainer.json
examples/linux-ftdi/blocking/: Cargo.toml
examples/linux-ftdi/blocking/.devcontainer/: devcontainer.json
examples/linux-ftdi/blocking/src/: main.rs
examples/linux-ftdi/src/: main.rs
examples/rp/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/rp-pico/async/: Cargo.toml
examples/rp-pico/async/src/: main.rs
examples/rp-pico/blocking/: Cargo.toml
examples/rp-pico/blocking/src/: main.rs
examples/rp/async/: Cargo.toml
examples/rp/blocking/: Cargo.toml
examples/rp/blocking/.cargo/: config.toml
examples/rp/blocking/src/: main.rs
examples/rp/src/: main.rs
tm1637/: Cargo.toml
tm1637/src/: align.rs  animitaion.rs  brightness.rs  builder.rs  conditional.rs  demo.rs  device.rs  direction.rs  error.rs  exact_size.rs  formatters.rs  identity.rs  lib.rs  mappings.rs  maybe_flipped.rs  mock.rs  mode.rs  numbers.rs  options.rs  str.rs  str_parser.rs  tokens.rs  windows.rs  windows_circular.rs
tm1637/src/demo/: asynch.rs  asynchronous.rs  blocking.rs
tm1637/src/device/: brightness.rs  erased.rs  mod.rs
tm1637/src/functionality/: asynchronous.rs  blocking.rs  mod.rs
tm1637/src/options/: circles.rs  clock.rs  erased.rs  repeat.rs  scroll.rs
tm1637/src/options/circles/: bits.rs  default_options.rs  direction.rs
tm1637/src/options/scroll/: direction.rs
tm1637/src/options/scroll/windows/: functions.rs  linear.rs
tm1637/src/options/windows/: circular.rs  functions.rs  linear.rs  mod.rs
tm1637/src/rotating_circle/: mod.rs  style.rs
tm1637/src/scroll/: direction.rs  mod.rs  style.rs
tm1637/src/windows/: circular.rs  functions.rs  linear.rs  mod.rs  reverse.rs
