[package]
name = "tm1637-embedded-hal"
version = "0.4.0"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
description = "A platform agnostic driver to interface with the TM1637 (7-segment LED display) using embedded-hal."
repository = "https://github.com/JadKHaddad/tm1637"
license = "MIT OR Apache-2.0"
keywords = ["tm1637", "embedded-hal", "no-std", "embedded"]
readme = "../README.md"

[features]
default = ["async", "demo", "ack"]
ack = []
async = ["dep:embedded-hal-async"]
blocking = []
disable-checks = []
demo = []
defmt = ["dep:defmt"]

[dependencies]
duplicate = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = { version = "1.0.0" }
defmt = { version = "0.3.6", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
