[package]
name = "ftdi-tm1637-example"
version = "0.0.0"
authors = ["Iván Sánchez Ortega <ivan@sanchezortega.es>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.86"
embedded-hal = "1.0.0"
ftdi-embedded-hal = { version = "0.22.0", features = ["ftdi"] }
linux-embedded-hal = "0.4.0"
tm1637-embedded-hal = { path = "../../tm1637", default-features = false }
