[package]
name = "ftdi-tm1637-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
embedded-hal = "1.0.0"
ftdi-embedded-hal = { version = "0.22.0", features = ["ftdi"] }
linux-embedded-hal = "0.4.0"
tm1637-embedded-hal = { version = "0.2.0", features = ["blocking", "demo"] }
