[package]
name = "rp2040-tm1637-example"
version = "0.0.0"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = "0.3.0"
embassy-usb-logger = "0.1.0"

log = "0.4"

tm1637-embedded-hal = { path = "../../../tm1637", default-features = false, features = [
    "async",
    "demo",
] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
