[package]
name = "rp2040-tm1637-example"
version = "0.0.0"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

rp2040-hal = { version = "0.10.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3.0"

embedded-hal = { version = "1.0.0" }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.5", features = [
    "unproven",
] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2.0"

tm1637 = { path = "../../../tm1637", default-features = false, features = [
    "blocking",
    "mappings",
    "demo",
] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
